[Refactor] 리스트 방식 수정